@@ -49,6 +49,7 @@ Version 1.3
  - Fixed Issue 431 - Update Fibaro fgrgbwm441 config thanks to Piotr (Alex)
  - Fixed Issue 433 - Update Fibaro fgwpe config thanks to Piotr (Alex)
  - Fixed Issue 439 - Update Fibaro FGMS001 config thanks to Jug (Alex)
+ - Fixed Issue 434 - Update Fibaro fgbs001 config thanks to Piotr (Alex)
 
 Version 1.2 
  - Released on 15/10/14
